--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -10,4 +12,33 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.Auth {
+  margin: 20px auto;
+  text-align: center;
+  width: 80%;
+  box-shadow: 0 2px 3px #ccc;
+  border: 1px solid #eee;
+  box-sizing: border-box;
+  padding: 20px;
+ background-color:#d9ecf3
+}
+
+
+@media(min-width:600px) {
+  .Auth {
+      width: 500px;
+  }
+}
+.OPTION_DETAIL{
+  display:flex;
+  flex-flow: row wrap;
+  justify-content: center;
+
+}
+.OPTION_DETAIL p{
+  border: 1px solid blue;
+  margin: 10px;
+  padding: 10px;
 }
